# simple_browser

./: Cargo.toml  README.md  run_on_wasabi.sh  test.html
browser_core/: Cargo.toml
browser_core/src/: browser.rs  http.rs  url.rs  utils.rs
browser_core/src/renderer/: page.rs
browser_core/src/renderer/css/: README.md  cssom.rs  token.rs
browser_core/src/renderer/dom/: api.rs  node.rs
browser_core/src/renderer/html/: README.md  attribute.rs  parser.rs  token.rs
browser_core/src/renderer/layout/: README.md  computed_style.rs  layout_object.rs  layout_view.rs  mod.rs
core/src/: url.rs
net/wasabi/: Cargo.toml
net/wasabi/src/: http.rs
src/: main.rs
